// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remapsScopes es6 blocks 1`] = `
Array [
  Object {
    "end": 1,
    "scopes": Array [
      Object {
        "bindingsNames": Array [
          "a",
        ],
        "type": "block",
      },
      Object {
        "bindingsNames": Array [
          "b",
        ],
        "type": "function",
      },
    ],
    "start": 0,
  },
  Object {
    "end": 2,
    "scopes": Array [
      Object {
        "bindingsNames": Array [
          "c",
        ],
        "type": "block",
      },
      Object {
        "bindingsNames": Array [],
        "type": "script",
      },
    ],
    "start": 1,
  },
]
`;

exports[`remapsScopes no-scopes 1`] = `null`;

exports[`remapsScopes simple 1`] = `
Array [
  Object {
    "end": 1,
    "scopes": Array [
      Object {
        "bindingsNames": Array [
          "a",
          "b",
        ],
        "type": "function",
      },
    ],
    "start": 0,
  },
  Object {
    "end": 2,
    "scopes": Array [
      Object {
        "bindingsNames": Array [],
        "type": "script",
      },
    ],
    "start": 1,
  },
]
`;
